@@ -25,7 +25,11 @@ Use this number of ports (default = 1)
 .IP
 Use specific network interface (default = all)
 .HP
-\fB\-p\fR, \fB\-\-port\fR=[\fIport\fR]
+\fB\-u\fR, \fB\-\-address\fR, \fB\-\-udp\-addr\fR=[\fIaddress\fR]
+.IP
+Use specific network address (default = 225.0.0.37)
+.HP
+\fB\-p\fR, \fB\-\-port\fR, \fB\-\-udp\-port\fR=[\fIport\fR]
 .IP
 Use specific network port (default = 21928)
 .HP
