@@ -1,7 +1,7 @@
 // qmidinet.cpp
 //
 /****************************************************************************
-   Copyright (C) 2010-2014, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -127,6 +127,7 @@ bool qmidinetApplication::setup (void)
 
 	if (!m_udpd.open(
 			pOptions->sInterface,
+			pOptions->sUdpAddr,
 			pOptions->iUdpPort,
 			pOptions->iNumPorts)) {
 	#ifdef CONFIG_ALSA_MIDI
