@@ -3,6 +3,12 @@ QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
 
 ChangeLog
 
+GIT HEAD
+
+- Previously hard-coded UDP/IP multicast address (225.0.0.37) is
+  now an user configurable option.
+
+
 0.2.0  2014-06-19  Headless finally.
 
 - A man page has beed added (making up Alessio Treglia's work on
